package com.vikash.builder;


import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Desktop {
    private String name ;
    private String ram;
    private String processor;
    private String monitor;
}
